fix: fixing bug in profile
